# ray-tracing

./: CMakeLists.txt  ppm2jpg.py  run.sh
include/: BDBox.hpp  Crash.hpp  MMPRay.hpp  Ray.hpp  Vec.hpp  def.hpp  include.hpp  init.hpp
include/geometry/: BaseGeo.hpp  Circ.hpp  Mesh.hpp  Sphere.hpp  Tetrahd.hpp  include.hpp
scene/: scene_file.sc  scene_file1.sc  scene_file2.sc  scene_file_brdf.sc  scene_file_fish.sc  scene_file_fish1.sc  scene_file_fish2.sc  scene_file_mis.sc  scene_file_myscene1.sc  scene_file_myscene2.sc  scene_file_ppm.sc  scene_file_pt.sc
src/: def.hpp  include.hpp  main.cpp  utils.hpp
src/helpers/: bdbox_helper.hpp  bdpt_helper.hpp  brdf_helper.hpp  camera_helper.hpp  cosw_helper.hpp  helper_base.hpp  helpers_include.hpp  ppm_helper.hpp  pt_helper.hpp
src/scene/: all_objs.hpp  scene.hpp  scene_reader.hpp
